Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122176

RCC should generate warning-free code.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.8.0 FF
    • 5.15.2, 6.6.1
    • Build tools: rcc
    • None
    • All
    • 108085ebf (dev)

      RCC generates code that raises warnings, which prevents the users from treating warnings as errors in order to compile their code. The users should not have to forfeit their coding standards to be able to use the resource system.

      See QTVSADDINBUG-992 for an example case, where at least two warnings; C4599 and C4711, are raised by MSVC.

        For Gerrit Dashboard: QTBUG-122176
        # Subject Branch Project Status CR V

            hjk hjk
            ali.demiralp Ali Can Demiralp (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes