rcc: Suppress MSVC warning C4711 in generated code

The informational message

    Warning C471 1function 'int __cdecl qInitResources_qrc(void)'
        selected for automatic inline expansion

is triggered by /W4.

Fixes: QTBUG-122176
Change-Id: Ifbd2e969b1bb7d25e1b83a4c5d8b305e7b6883a2
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>